Switched the base model

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
       <meta charset="utf-8">
 
       <!-- * Fonts * -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
       <!-- * Identity * -->
       <link rel="stylesheet" href="/static/identity/resets.css">
       <link rel="stylesheet" href="/static/identity/colors.css">
       <link rel="stylesheet" href="/static/identity/typography.css">
+      <link rel="stylesheet" href="/static/identity/content-page.css">
 
       <!-- * Libraries * -->
       <script src="/static/libs/vue/dist/vue.min.js"></script>
@@ -24,15 +25,25 @@
       <!-- * Elements * -->
 
       <!-- * Components * -->
-      <link  href="/static/components/clients-balance-item/clients-balance-item.css" rel="stylesheet">
-      <script src="/static/components/clients-balance-item/clients-balance-item.js"></script>
+      <link  href="/static/components/custom-header/custom-header.css" rel="stylesheet">
+      <script src="/static/components/custom-header/custom-header.js"></script>
+
+      <link  href="/static/components/custom-footer/custom-footer.css" rel="stylesheet">
+      <script src="/static/components/custom-footer/custom-footer.js"></script>
+
+      <link  href="/static/components/people-balance-item/people-balance-item.css" rel="stylesheet">
+      <script src="/static/components/people-balance-item/people-balance-item.js"></script>
+
+      <link  href="/static/components/system-balance/system-balance.css" rel="stylesheet">
+      <script src="/static/components/system-balance/system-balance.js"></script>
 
       <!-- * Compositions * -->
-      <link  href="/static/compositions/clients-balance/clients-balance.css" rel="stylesheet">
-      <script src="/static/compositions/clients-balance/clients-balance.js"></script>
+      <link  href="/static/compositions/people-balance/people-balance.css" rel="stylesheet">
+      <script src="/static/compositions/people-balance/people-balance.js"></script>
 
       <!-- * Pages * -->
-      <script src="/static/pages/index.js"></script>
+      <link  href="/static/pages/index/index.css" rel="stylesheet">
+      <script src="/static/pages/index/index.js"></script>
 
       <!-- * Initializations * -->
       <script>
